--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -80,7 +80,7 @@
                   <td class="px-2 flex items-center">
                       <div>{{ hunt.hunterCount }}</div>
                       @if (hunt.hunterDensity && hunt.hunterDensity <= 50) {
-                        <ng-icon (mouseover)="showHunterDensityTooltip(hunt.id.toString(), 'hover', $event)" name="heroExclamationTriangle" class="ml-1"></ng-icon>
+                        <ng-icon (mouseover)="showTooltip(hunt.id.toString(), 'hover', $event)" name="heroExclamationTriangle" class="ml-1"></ng-icon>
                         <div id="{{ hunt.id }}" role="tooltip"
                           class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip">
                             High hunter density: 1 hunter for every ~{{ hunt.hunterDensity }} acres
@@ -107,35 +107,56 @@
                 </tr>
               </table>
             </td>
-            <td class="px-6 py-4 align-top">
+            <td class="px-4 py-2 align-top">
 
               @if (hunt.wxDetails) {
                 @switch (hunt.wxDetails[0] | wxDetailType) {
                   @case ('summary') {
+                    <div class="w-full uppercase text-xs flex items-center border-b border-gray-500 mb-2 pb-1">
+                      <span class="font-semibold ml-2">Observed Average Temperatures</span>
+                    </div>
                     @for (wx of $any(hunt.wxDetails); track wx) {
                       <div class="w-full uppercase text-xs">
-                        <div class="flex items-center uppercase font-bold text-xs border-b border-gray-600 ml-2">
-                          <ng-icon name="heroClock" class="mr-1"></ng-icon>
-                          <span class="mr-2">Averages</span>
-                          <span class="italic ml-2 text-gray-400">
+                        <div class="flex items-center uppercase font-bold text-xs border-b border-gray-700">
+                          <span class="italic ml-2 text-gray-400 pb-1">
                             {{ wx.start | date: 'MMM d' }} &ndash; {{ wx.end | date: 'MMM d' }}
                           </span>
                         </div>
-                        <div class="flex items-center m-auto py-1">
-                          <span class="font-semibold px-2 text-gray-400">High:</span>
-                          <span [class]="wx.avgMaxTemp | wxAvgTempDeparture:true:wx.start:hunt.wxHistAvgs!">
-                            {{ wx.avgMaxTemp }}&deg;
-                          </span>
-                          <span class="font-semibold px-2 text-gray-400">Low:</span>
-                          <span [class]="wx.avgMaxTemp | wxAvgTempDeparture:false:wx.start:hunt.wxHistAvgs!">
-                            {{ wx.avgMinTemp }}&deg;
-                          </span>
-                        </div>
-                        <div class="flex items-center m-auto py-1">
-                          <span class="font-semibold px-2 text-gray-400">Max High:</span>
-                          <span class="text-gray-200">{{ wx.maxTemp }}&deg;</span>
-                          <span class="font-semibold px-2 text-gray-400">Min Low:</span>
-                          <span class="text-gray-200">{{ wx.minTemp }}&deg;</span>
+                        <div class="flex items-center m-auto py-1 mb-3">
+                          @if ((wx.avgMaxTemp | wxAvgTempDeparture:true:wx.start:hunt.wxHistAvgs!); as maxDepart) {
+                            <span class="font-semibold px-2 text-gray-400">High:</span>
+                            @if (maxDepart.msg?.length) {
+                              <span [class]="maxDepart.class"
+                                (mouseover)="showTooltip('max' + hunt.id.toString() + '' + wx.start + '' + wx.end, 'hover', $event)">
+                                  {{ wx.avgMaxTemp }}&deg;
+                              </span>
+                              <div id="max{{ hunt.id }}{{ wx.start }}{{ wx.end }}" role="tooltip"
+                                class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 normal-case transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip"
+                                [innerHTML]="maxDepart.msg">
+                              </div>
+                            } @else {
+                              <span [class]="maxDepart.class">
+                                {{ wx.avgMaxTemp }}&deg;
+                              </span>
+                            }
+                          }
+                          @if ((wx.avgMinTemp | wxAvgTempDeparture:false:wx.start:hunt.wxHistAvgs!); as minDepart) {
+                            <span class="font-semibold px-2 text-gray-400">Low:</span>
+                            @if (minDepart.msg?.length) {
+                              <span [class]="minDepart.class"
+                                (mouseover)="showTooltip('min' + hunt.id.toString() + '' + wx.start + '' + wx.end, 'hover', $event)">
+                                  {{ wx.avgMinTemp }}&deg;
+                              </span>
+                              <div id="min{{ hunt.id }}{{ wx.start }}{{ wx.end }}" role="tooltip"
+                                class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 normal-case transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip"
+                                [innerHTML]="minDepart.msg">
+                              </div>
+                            } @else {
+                              <span [class]="minDepart.class">
+                                {{ wx.avgMinTemp }}&deg;
+                              </span>
+                            }
+                          }
                         </div>
                       </div>
                     }
@@ -157,9 +178,10 @@
                   </div>
                 </div>
               } -->
-              <div class="w-full text-xs text-gray-400 border-t border-gray-600 pt-1 pl-2 mr-1 flex items-center">
+              <div class="text-xs text-gray-400 pl-2 flex items-center">
                 &#64; {{ hunt.climateTown }}, GA
               </div>
+              <!-- {{ hunt.wxHistAvgs | json }} -->
             </td>
           </tr>
         } @empty {
