--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -68,7 +68,7 @@
             </td>
             <td class="px-5 py-4 align-top bg-gray-800">
               @for (date of hunt.huntDates; track date) {
-                <div class="mx-1">
+                <div class="mx-1 uppercase">
                   {{ date.start | date: 'MMM d' }} &ndash; {{ date.end | date: 'MMM d' }}
                 </div>
               }
@@ -115,7 +115,7 @@
                     <div class="w-full uppercase text-xs flex items-center border-b border-gray-500 mb-2 pb-1">
                       <span class="font-semibold ml-2">Observed Average Temperatures</span>
                     </div>
-                    @for (wx of $any(hunt.wxDetails); track wx) {
+                    @for (wx of $any(hunt.wxDetails); track wx; let i = $index) {
                       <div class="w-full uppercase text-xs">
                         <div class="flex items-center uppercase font-bold text-xs border-b border-gray-700">
                           <span class="italic ml-2 text-gray-400 pb-1">
@@ -127,10 +127,10 @@
                             <span class="font-semibold px-2 text-gray-400">High:</span>
                             @if (maxDepart.msg?.length) {
                               <span [class]="maxDepart.class"
-                                (mouseover)="showTooltip('max' + hunt.id.toString() + '' + wx.start + '' + wx.end, 'hover', $event)">
+                                (mouseover)="showTooltip(i + '' + wx.ident + 'high', 'hover', $event)">
                                   {{ wx.avgMaxTemp }}&deg;
                               </span>
-                              <div id="max{{ hunt.id }}{{ wx.start }}{{ wx.end }}" role="tooltip"
+                              <div id="{{ i }}{{ wx.ident }}high" role="tooltip"
                                 class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 normal-case transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip"
                                 [innerHTML]="maxDepart.msg">
                               </div>
@@ -144,10 +144,10 @@
                             <span class="font-semibold px-2 text-gray-400">Low:</span>
                             @if (minDepart.msg?.length) {
                               <span [class]="minDepart.class"
-                                (mouseover)="showTooltip('min' + hunt.id.toString() + '' + wx.start + '' + wx.end, 'hover', $event)">
+                                (mouseover)="showTooltip(i + '' + wx.ident + 'low', 'hover', $event)">
                                   {{ wx.avgMinTemp }}&deg;
                               </span>
-                              <div id="min{{ hunt.id }}{{ wx.start }}{{ wx.end }}" role="tooltip"
+                              <div id="{{ i }}{{ wx.ident }}low" role="tooltip"
                                 class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 normal-case transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip"
                                 [innerHTML]="minDepart.msg">
                               </div>
@@ -160,27 +160,59 @@
                         </div>
                       </div>
                     }
+                    <div class="text-xs text-gray-500 pl-2 flex items-center">
+                      &#64; {{ $any(hunt.wxDetails[0]).location }}, GA
+                    </div>
                   }
                   @case ('detailed') {
-                    detailed ...
+                    <!-- {{ hunt.wxDetails | json }} -->
+                    <div class="w-full uppercase text-xs flex items-center border-b border-gray-500 mb-2 pb-1">
+                      <span class="font-semibold ml-2">Observed Conditions</span>
+                    </div>
+                    <div class="w-full flex items-center font-bold uppercase mb-3">
+                      @for (wx of $any(hunt.wxDetails); track wx.date; let i= $index, last = $last) {
+                        <div class="p-1 text-xs text-gray-400 {{ hunt.wxDetails.length < 3 ? 'w-1/2' : 'w-1/3' }} {{ !last ? 'border-r border-gray-400' : 'border-none' }}">
+                          <div class="flex-none italic text-center">
+                            {{ wx.date | date: 'EEE' }}, {{ wx.date | date: 'MM/dd' }}
+                          </div>
+                          <div class="flex justify-center items-center">
+                            <object [data]="wx.middayIcon | wxCondIcon | safe"
+                              type="image/svg+xml" class="w-[50px] h-[50px]"
+                              (mouseover)="showTooltip(i + '' + wx.ident + 'cond', 'hover', $event)"></object>
+                            <div id="{{ i }}{{ wx.ident }}cond" role="tooltip"
+                              class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 normal-case transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip"
+                              [innerHTML]="wx.middayDescr"></div>
+                          </div>
+                          <div class="flex-none text-center">
+                            <div>
+                              <span class="px-2">High:</span>
+                              <span class="font-normal text-gray-200">{{ wx.high }}&deg;</span>
+                            </div>
+                            <div>
+                              <span class="px-2">Low:</span>
+                              <span class="font-normal text-gray-200">{{ wx.low }}&deg;</span>
+                            </div>
+                          </div>
+                        </div>
+                      }
+                    </div>
+                    <div class="text-xs text-gray-500 pl-2 flow-root">
+                      <div class="float-left pt-1">&#64; {{ $any(hunt.wxDetails[0]).location }}, GA</div>
+                      <div class="float-right">
+                        <button type="button" class="px-2 py-1 text-xs uppercase font-medium text-center inline-flex items-center text-white rounded-full focus:ring-1 focus:outline-none bg-gray-600 hover:bg-gray-700 focus:ring-white">
+                          <ng-icon name="heroArrowTopRightOnSquare" class="w-4 h-4 mr-1"></ng-icon>
+                          More Details
+                          </button>
+                      </div>
+                    </div>
                   }
                   @default {
-                    No weather details found.
+                    <span class="text-gray-400">
+                      No weather details found.
+                    </span>
                   }
                 }
               }
-              <!-- @for (w of hunt.wxHistAvgs; track w.startDate; let i = $index) {
-                <div [ngClass]="{'border-b border-gray-700' : (hunt.wxHistAvgs!.length > 0 && i !== hunt.wxHistAvgs!.length - 1) }">
-                  <div class="text-xs pl-2 font-semibold mb-1">{{ w.startDate | date: 'MMM dd' }} &ndash; {{ w.endDate | date: 'MMM dd' }}</div>
-                  <div class="flex items-center w-full text-xs mb-1">
-                    <div class="w-1/2 text-center"><span>High:</span> {{ w.avgHigh }}&deg;</div>
-                    <div class="w-1/2 text-center"><span>Low:</span> {{ w.avgLow }}&deg;</div>
-                  </div>
-                </div>
-              } -->
-              <div class="text-xs text-gray-400 pl-2 flex items-center">
-                &#64; {{ hunt.climateTown }}, GA
-              </div>
               <!-- {{ hunt.wxHistAvgs | json }} -->
             </td>
           </tr>
@@ -310,7 +342,7 @@
 
 @if ((isEndOfResults$ | async) && (hunts$ | async)!.length > 0) {
   <div class="w-[95%] flex justify-center mt-1 mb-12 bg-gray-900 py-1">
-    <div class="flex items-center text-gawmas-yeller text-sm">
+    <div class="flex items-center text-gray-300 text-sm">
       <ng-icon name="heroCheckCircle" class="mr-1"></ng-icon>
       <span class="italic uppercase">End of results</span>
     </div>
